--- a/style.css
+++ b/style.css
@@ -2,14 +2,40 @@ body {
   background-color: #426648;
 }
 
+.infoBtn {
+  text-align: right;
+  color: #6a9f74;
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+.info:hover, .infoBtn:hover ~ .info {
+  background-color:  #6a9f74;
+  display: block;
+}
+
+.info {
+  position: absolute;
+  right: 12.5vw;
+  top: 12vh;
+  width: 50vw;
+  padding: 30px;
+
+  border-radius: 0.5em;
+  border-color: #6a9f74;
+  color: #426648;
+  font-size: 14pt;
+  font-family: 'Roboto', sans-serif;
+  display: none;
+}
+
 .animation {
   margin-bottom: 100px;
 }
 
 .centerCol {
   margin: auto;
-  width: 75%;
-  margin-top: 50px;
+  width: 75vw;
+  margin-top: 7vh;
 }
 
 .site, .dateTime {
