--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   right: 12.5vw;
   top: 12vh;
   width: 50vw;
-  padding: 30px;
+  padding: 15px 30px;
 
   border-radius: 0.5em;
   border-color: #6a9f74;
